update intellij vm opts