@@ -1,22 +1,25 @@
 -server
--Xms3g
--Xmx4g
--XX:SurvivorRatio=20
--XX:NewRatio=3
--Xss16m
--XX:NewSize=700m
--XX:MaxNewSize=700m
+-Xms2048m
+-Xmx2048m
+-XX:NewSize=512m
+-XX:MaxNewSize=512m
+-XX:PermSize=512m
+-XX:MaxPermSize=512m
 -XX:+UseParNewGC
+-XX:ParallelGCThreads=4
+-XX:MaxTenuringThreshold=1
+-XX:SurvivorRatio=8
+-XX:+UseCodeCacheFlushing
 -XX:+UseConcMarkSweepGC
+-XX:+AggressiveOpts
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSIncrementalMode
+-XX:+CMSIncrementalPacing
 -XX:+CMSParallelRemarkEnabled
--XX:ConcGCThreads=4
--XX:ParallelGCThreads=8
--XX:ReservedCodeCacheSize=240m
--XX:+AlwaysPreTouch
--XX:+TieredCompilation
--XX:+UseCompressedOops
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
--Djsse.enableSNIExtension=false
+-XX:CMSInitiatingOccupancyFraction=65
+-XX:+CMSScavengeBeforeRemark
+-XX:+UseCMSInitiatingOccupancyOnly
+-XX:ReservedCodeCacheSize=64m
+-XX:-TraceClassUnloading
 -ea
+-Dsun.io.useCanonCaches=false
